--- a/UI/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/UI/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -5,10 +5,12 @@
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h3>@ViewData["Title"]</h3>
+<h3 class="text-center">@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
+
+<div class="container mt-5 mb-5">
 <div class="row">
-    <div class="col-md-6">
+        <div class="col-md-8 mx-auto">
         <form id="change-password-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
@@ -26,9 +28,12 @@
                 <label asp-for="Input.ConfirmPassword" class="form-label"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
+            <div class="text-center">
+                    <button type="submit" class="btn btn-lg btn-primary rounded-pill">Update password</button>
+            </div>
         </form>
     </div>
+</div>
 </div>
 
 @section Scripts {
