--- a/UI/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/UI/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -1,14 +1,15 @@
 ﻿@page
 @model EmailModel
 @{
-    ViewData["Title"] = "Manage Email";
+    ViewData["Title"] = "Change Email";
     ViewData["ActivePage"] = ManageNavPages.Email;
 }
 
-<h3>@ViewData["Title"]</h3>
+<h3 class="text-center">@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
+<div class="container mt-5 mb-5">
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-8 mx-auto">
         <form id="email-form" method="post">
             <div asp-validation-summary="All" class="text-danger" role="alert"></div>
             @if (Model.IsEmailConfirmed)
@@ -26,7 +27,7 @@
                 <div class="form-floating mb-3">
                     <input asp-for="Email" class="form-control" placeholder="Please enter your email." disabled />
                     <label asp-for="Email" class="form-label"></label>
-                    <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button>
+                   @*  <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button> *@
                 </div>
             }
             <div class="form-floating mb-3">
@@ -34,11 +35,13 @@
                 <label asp-for="Input.NewEmail" class="form-label"></label>
                 <span asp-validation-for="Input.NewEmail" class="text-danger"></span>
             </div>
-            <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="w-100 btn btn-lg btn-primary">Change email</button>
+            <div class="text-center">
+                    <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="btn btn-lg btn-primary rounded-pill">Change email</button>
+            </div>
         </form>
     </div>
 </div>
-
+</div>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
