--- a/UI/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/UI/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,28 +1,62 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Profile";
+    ViewData["Title"] = "Change Profile Info";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h3>@ViewData["Title"]</h3>
+<h3 class="text-center">@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
+
+<div class="container mt-5 mb-5">
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-8 mx-auto">
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
-                <input asp-for="Username" class="form-control" placeholder="Please choose your username." disabled />
-                <label asp-for="Username" class="form-label"></label>
+                <input asp-for="Input.UserName" class="form-control" placeholder="Please choose your username."  />
+                <label asp-for="Input.UserName" class="form-label"></label>
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number."/>
                 <label asp-for="Input.PhoneNumber" class="form-label"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.FirstName" class="form-control" placeholder="Please enter your First Name." />
+                    <label asp-for="Input.FirstName" class="form-label"></label>
+                    <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.LastName" class="form-control" placeholder="Please enter your Last Name." />
+                    <label asp-for="Input.LastName" class="form-label"></label>
+                    <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                </div>
+                @if (User.IsInRole("Customer"))
+                {
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.Address" class="form-control" placeholder="Please enter your Address." />
+                    <label asp-for="Input.Address" class="form-label"></label>
+                    <span asp-validation-for="Input.Address" class="text-danger"></span>
+                </div>
+                    
+                }
+                @if (User.IsInRole("Buyer"))
+                {
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.Organization" class="form-control" placeholder="Please enter your Organization." />
+                    <label asp-for="Input.Organization" class="form-label"></label>
+                    <span asp-validation-for="Input.Organization" class="text-danger"></span>
+                </div>
+                    
+                }
+
+            <div class="text-center">
+            <button id="update-profile-button" type="submit" class="btn btn-lg btn-primary rounded-pill">Save</button>
+            </div>
         </form>
     </div>
+</div>
 </div>
 
 @section Scripts {
