--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="~/css/responsive.css" asp-append-version="true">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body d-flex flex-column min-vh-100>
 
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
@@ -59,20 +59,20 @@
 
 
 
-        <main role="main" class="pb-3">
+    <main role="main" class="pb-3 flex-fill">
             @RenderBody()
         </main>
 
 
     <!-- Footer -->
-    <footer class="bg-dark text-white py-4">
+    <footer class="bg-dark text-white py-4 mt-auto">
         <div class="container">
-            <div class="row">
-                <div class="col-md-4 mb-3">
-                    <h5><i class="fas fa-shopping-bag me-2"></i>ShopEasy</h5>
+            <div class="row text-center">
+                <div class="col-md-5 mb-3">
+                    <h5><i class="fas fa-shopping-bag me-2"></i>MyShop</h5>
                     <p>Your one-stop destination for all your shopping needs. Quality products at affordable prices.</p>
                 </div>
-                <div class="col-md-2 mb-3">
+                <div class="col-md-3 mb-3">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="@Url.Action("Index", "Home")" class="text-white-50">Home</a></li>
@@ -80,17 +80,17 @@
                         <li><a href="@Url.Action("Index", "Cart")" class="text-white-50">Cart</a></li>
                     </ul>
                 </div>
-                <div class="col-md-3 mb-3">
+@*                 <div class="col-md-3 mb-3">
                     <h5>Customer Service</h5>
                     <ul class="list-unstyled">
                         <li><a href="#" class="text-white-50">Contact Us</a></li>
                         <li><a href="#" class="text-white-50">Shipping Policy</a></li>
                         <li><a href="#" class="text-white-50">Returns & Refunds</a></li>
                     </ul>
-                </div>
-                <div class="col-md-3 mb-3">
+                </div> *@
+                <div class="col-md-4 mb-3">
                     <h5>Stay Connected</h5>
-                    <div class="d-flex">
+                    <div class="d-flex justify-content-center mt-3">
                         <a href="#" class="text-white me-3"><i class="fab fa-facebook fa-2x"></i></a>
                         <a href="#" class="text-white me-3"><i class="fab fa-twitter fa-2x"></i></a>
                         <a href="#" class="text-white me-3"><i class="fab fa-instagram fa-2x"></i></a>
@@ -99,7 +99,7 @@
             </div>
             <hr class="my-4">
             <div class="text-center">
-                <p>&copy; 2023 ShopEasy. All rights reserved.</p>
+                <p>&copy; 2025 MyShop. All rights reserved.</p>
             </div>
         </div>
     </footer>
