--- a/UI/wwwroot/css/responsive.css
+++ b/UI/wwwroot/css/responsive.css
@@ -79,6 +79,9 @@
     .hero-section h1 {
         font-size: 2.5rem;
     }
+    .btn {
+        --bs-btn-font-size: 0.9rem;
+    }
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
@@ -89,6 +92,10 @@
     
     .container {
         max-width: 1140px;
+    }
+
+    .btn {
+        --bs-btn-font-size: 0.9rem;
     }
 }
 
