--- a/UI/wwwroot/css/style.css
+++ b/UI/wwwroot/css/style.css
@@ -8,6 +8,7 @@
     --info-color: #0dcaf0;
     --light-color: #f8f9fa;
     --dark-color: #212529;
+
 }
 
 /* Global Styles */
@@ -111,9 +112,15 @@ button.accept-policy {
 }
 
 .product-price {
-    font-size: 1.25rem;
+    font-size: 1.2rem;
     font-weight: bold;
     color: var(--success-color);
+}
+
+.product-price-danger {
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: var(--danger-color);
 }
 
 .original-price {
@@ -264,6 +271,11 @@ button.accept-policy {
     transform: translateY(-2px);
     box-shadow: 0 4px 8px rgba(25, 135, 84, 0.3);
 }
+
+    .btn-add-to-cart:disabled {
+        background: linear-gradient(135deg, rgb(220, 53, 69), rgb(220, 53, 69));
+        color: white;
+    }
 
 /* View Toggle */
 .view-toggle .btn.active {
