--- a/UI/Views/Admin/DeleteProduct.cshtml
+++ b/UI/Views/Admin/DeleteProduct.cshtml
@@ -1,4 +1,5 @@
-﻿@model DAL.Entities.Product
+﻿@using BLL.DTOs.Products
+@model GetProductWithDetailsDto
 
 @{
     ViewData["Title"] = "Delete";
@@ -36,28 +37,29 @@
             @Html.DisplayFor(model => model.Stock)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
+            Image
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
+            <img src="~/@Model.ImageUrl" style="width:200px" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.AddedByUser)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AddedByUser.Id)
+            @Html.DisplayFor(model => model.AddedByUser)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.Description)
+            @Html.DisplayFor(model => model.Category)
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="DeleteProduct">
         <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="ImageUrl" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="ProductIndex">Back to List</a>
     </form>
 </div>
