--- a/UI/Views/Admin/EditProduct.cshtml
+++ b/UI/Views/Admin/EditProduct.cshtml
@@ -1,4 +1,5 @@
-﻿@model DAL.Entities.Product
+﻿@using UI.ViewModels.Products
+@model ProductAddUpdateViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -10,9 +11,11 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="EditProduct" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="ImageUrl" />
+            <input type="hidden" asp-for="AddedByUserId" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -34,20 +37,18 @@
                 <span asp-validation-for="Stock" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageUrl" class="control-label"></label>
-                <input asp-for="ImageUrl" class="form-control" />
-                <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                <label asp-for="ImageFile" class="control-label"></label>
+                <input asp-for="ImageFile" type="file" class="form-control" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
+                <p>Old Image</p>
+                <img src="~/@Model.ImageUrl" style="width:200px" />
             </div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
                 <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="AddedByUserId" class="control-label"></label>
-                <select asp-for="AddedByUserId" class="form-control" asp-items="ViewBag.AddedByUserId"></select>
-                <span asp-validation-for="AddedByUserId" class="text-danger"></span>
-            </div>
+        
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -56,7 +57,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="ProductIndex">Back to List</a>
 </div>
 
 @section Scripts {
