--- a/UI/Views/Admin/ProductIndex.cshtml
+++ b/UI/Views/Admin/ProductIndex.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<DAL.Entities.Product>
+﻿@using BLL.DTOs.Products
+@model IEnumerable<GetProductWithDetailsDto>
 
 @{
     ViewData["Title"] = "Products";
@@ -7,7 +8,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreateProduct">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -16,16 +17,13 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Stock)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImageUrl)
+                Image
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.AddedByUser)
@@ -43,27 +41,24 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Stock)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImageUrl)
+                <img src="~/@item.ImageUrl" style="width:200px" />
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.AddedByUser.Id)
+                @Html.DisplayFor(modelItem => item.AddedByUser)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Category.Description)
+                @Html.DisplayFor(modelItem => item.Category)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="EditProduct" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="ProductDetails" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="DeleteProduct" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
