--- a/UI/wwwroot/css/responsive.css
+++ b/UI/wwwroot/css/responsive.css
@@ -79,7 +79,7 @@
     .hero-section h1 {
         font-size: 2.5rem;
     }
-    .btn {
+    .btn-add-to-cart {
         --bs-btn-font-size: 0.9rem;
     }
 }
@@ -94,7 +94,7 @@
         max-width: 1140px;
     }
 
-    .btn {
+    .btn-add-to-cart {
         --bs-btn-font-size: 0.9rem;
     }
 }
